--- a/content/posts/2020-05-20-20th-novel-1.md
+++ b/content/posts/2020-05-20-20th-novel-1.md
@@ -4,33 +4,33 @@ date: 2020-05-20
 tags: notes
 ---
 
-因为近期在读鲁迅的几本书，就着手找了些资料辅助着看看。其中饶有趣味的是许子东讲《20 世纪中国小说》。这是一门在看理想上线的课程，许子东计划是用 100 期节目，读 100 年小说，看 100 年中国。所谓的 3 个 100 的计划。
+因为近期在读鲁迅的几本书，就着手找了些辅助资料看看。其中饶有趣味的是许子东讲《20 世纪中国小说》。这是一门在看理想上线的课程，许子东计划是用 100 期节目，读 100 年小说，看 100 年中国。所谓的 3 个 100 的计划。
 
-我初听了鲁迅的一两期节目，发现不行，这个课程要从头来学。一来我读小说甚少，但这两年对短篇小说有很大兴趣，这是一个很好的补充；二来，我所读的书，按照标准，大多数属于当代小说，就不免遇到一个问题，即便是好的小说，为何是这种结构与文体呢？是继承还是有所突破呢？这门课确实给了不少帮助。
+我初听了鲁迅的一两期节目，发现不行，这个课程要从头来学。一来我读小说甚少，但这两年对短篇小说有很大兴趣，这是一个很好的补充；二来，我所读的书，按照标准，大多数属于当代小说，就不免遇到一个问题，即便是好的小说，为何是这种结构与文体呢？与更早年代的作品比较是继承还是有所突破呢？这门课确实给了不少帮助。
 
 目前我快听完了 1917-1941，也就是五四时期的小说。有些有趣的知识，记录一下。
 
-1.鲁迅的《中国小说史略》讲清代小说细分为七类，但是许子东还是大部分采用了王德威《被压抑的现代性：晚清小说新论》中的划分，最后讲晚清小说划分四类：青楼狭邪、狭义公案、丑怪谴责和政治幻想。其中晚清最有市场和影响力的，就是丑怪谴责，包括晚清四大谴责小说《官场现形记》、《二十年目睹之怪现状》、《老残游记》和《孽海花》。
+**1.**鲁迅的《中国小说史略》将清代小说细分为七类，但是许子东还是大部分采用了王德威《被压抑的现代性：晚清小说新论》中的划分，最后将晚清小说划分四类：青楼狭邪、狭义公案、丑怪谴责和政治幻想。其中晚清最有市场和影响力的，就是丑怪谴责，包括晚清四大谴责小说《官场现形记》、《二十年目睹之怪现状》、《老残游记》和《孽海花》。
 
-2.晚清和五四时期的小说作家，多有两种处写书外的谋生手段，晚清是版报，五四是教书。
+**2.**晚清和五四时期的小说作家，多有两种除写书外的谋生手段，晚清是办报，五四是教书。
 
-3.《官场现形记》的写法是用故事说话，没有一个贯穿全局的主人公，所谓跑人跑不停，但是李伯元在写作中，仿佛是上帝视角，毫无情绪在里面，以极端冷淡、冷静的口味叙述。比如一个巡抚要高升，准备走之前给仆人安排妥当，就找了个肥差让仆人去做，文中直言，也要让身边的人出去捞两个。「捞两个」这样的词儿，在晚清之后直到今天，恐怕也没有人写得出了。
+**3.**《官场现形记》的写法是用故事说话，没有一个贯穿全局的主人公，所谓跑人跑不停，但是李伯元在写作中，仿佛是上帝视角，毫无情绪在里面，以极端冷淡、冷静的口吻叙述。比如一个巡抚要高升，准备走之前给仆人安排妥当，就找了个肥差让仆人去做，文中直言，也要让身边的人出去捞两个。「捞两个」这样的词儿，在晚清之后直到今天，恐怕也没有人写得出了。
 
-4.《官场现形记》里讲到为官的手段有两种，一个是捐官，一个是买缺。捐官是合法的，政府公开标价的，但是一个职位可以被卖多次，却只有一个真正能坐上官位的，这个官位，就叫缺。所以捐官之后只有一个名头，想真正做官，还得买缺，自然，就有了肥缺和瘦缺。买缺的钱，却是地方官赚走了。所以当时一个官，有三种开销，一是家庭日常，二是买官的成本，三是政治资本，所谓办事需要上下打点。
+**4.**《官场现形记》里讲到为官的手段有两种，一个是捐官，一个是买缺。捐官是合法的，政府公开标价的，但是一个职位可以被卖多次，却只有一个真正能坐上官位的，这个官位，就叫缺。所以捐官之后只有一个名头，想真正做官，还得买缺，自然，就有了肥缺和瘦缺。买缺的钱，却是地方官赚走了。所以当时一个官，有三种开销，一是家庭日常，二是买官的成本，三是政治资本，所谓办事需要上下打点。
 
-5.现在看到的《官场现形记》只是上半部，李伯元的本意是，中国当下出现的问题，都是因为官坏，老百姓上行下效，自然好不了，所以先讲清楚官是如何坏的，在把想做官的人放到一起，向上学一样叫他们什么是好的，再放出来做官，社会自然就好了。
+**5.**现在看到的《官场现形记》只是上半部，李伯元的本意是，中国当下出现的问题，都是因为官坏，老百姓上行下效，自然好不了，所以先讲清楚官是如何坏的，在把想做官的人放到一起，向上学一样叫他们什么是好的，再放出来做官，社会自然就好了。
 
-6.鲁迅的伟大之一就在于他不仅看到官有问题，更是看到官与民交叉部分的问题，也就是国民性。但鲁迅也是第一个反思自己的人，当时的比喻手法是说，人们普遍愚昧，像是被关在一个黑屋子里，革命者要做的就是给他们打开窗子，让人们看见外面，但到了《伤逝》的时候，鲁迅却在想，是不是自己在做的事情，是开了窗却没有门呢？让人们看见外面，反而是痛苦的。
+**6.**鲁迅的伟大之一就在于他不仅看到官有问题，更是看到官与民交叉部分的问题，也就是国民性。但鲁迅也是第一个反思自己的人，当时的比喻手法是说，人们普遍愚昧，像是被关在一个黑屋子里，革命者要做的就是给他们打开窗子，让人们看见外面，但到了《伤逝》的时候，鲁迅却在想，是不是自己在做的事情，是开了窗却没有门呢？让人们看见外面，反而是痛苦的。
 
-7.与《官场现形记》不同，《二十年目睹之怪现状》则是包含情绪，对喜欢的喜欢，对批判的批判。
+**7.**与《官场现形记》不同，《二十年目睹之怪现状》则是包含情绪，对喜欢的喜欢，对批判的批判。
 
-8.从晚清小说一直到五四时期郁达夫的作品，对于青楼的描写，都沿袭了《海上花列传》的本质，青楼不是欢愉场所，青楼里更多的是一种模拟家庭环境，比如一个姑娘长期只服侍一个客人，甚至客人和姑娘之间产生了严重的嫉妒心理。比如在青楼多半的活动是喝酒、打牌、聊家常。
+**8.**从晚清小说一直到五四时期郁达夫的作品，对于青楼的描写，都沿袭了《海上花列传》的本质，青楼不是欢愉场所，青楼里更多的是一种模拟家庭环境，比如一个姑娘长期只服侍一个客人，甚至客人和姑娘之间产生了严重的嫉妒心理。比如在青楼多半的活动是喝酒、打牌、聊家常。
 
-9.鲁迅的《药》可以说是 20 世纪中国小说的总标题，《狂人日记》则是总纲。
+**9.**鲁迅的《药》可以说是 20 世纪中国小说的总标题，《狂人日记》则是总纲。
 
-10.从《狂人日记》看鲁迅的文章，多有三层意思，一个是“看与被看”；一个是“独异与庸众”；还有一个是“希望和绝望”。这是看鲁迅作品一个很好的切入点。其中的看与被看，就是主人公“我”看到别人在“看我”。想想就很有意思，他们为什么看我呢？我为什么关心他们看不看我呢？放到今天也是个很有意思的话题。
+**10.**从《狂人日记》看鲁迅的文章，多有三层意思，一个是“看与被看”；一个是“独异与庸众”；还有一个是“希望和绝望”。这是看鲁迅作品一个很好的切入点。其中的看与被看，就是主人公“我”看到别人在“看我”。想想就很有意思，他们为什么看我呢？我为什么关心他们看不看我呢？放到今天也是个很有意思的话题。
 
-11.鲁迅作品中另一个关键就是“奴隶和奴才”。在《灯下漫笔》中鲁迅回顾中国历史就是两段，“一，想做奴隶而不得的时代；二，暂时做稳了奴隶的时代。”可是奴隶怎么做着做着成了奴才呢？这就是《阿Q正传》的核心，奴隶是生态，奴才是心态。奴隶变奴才，有三个条件，其一，精神胜利法，要在奴隶生活中找到乐趣，赞叹、抚摸、陶醉；其二，不仅被比自己强的人欺负，也会欺负比自己弱的人；第三，翻身之后，也希望做主子，有自己的奴才。想一想当下的社会环境，也是很有趣。
+**11.**鲁迅作品中另一个关键就是“奴隶和奴才”。在《灯下漫笔》中鲁迅回顾中国历史就是两段，“一，想做奴隶而不得的时代；二，暂时做稳了奴隶的时代。”可是奴隶怎么做着做着成了奴才呢？这就是《阿Q正传》的核心，奴隶是生态，奴才是心态。奴隶变奴才，有三个条件，其一，精神胜利法，要在奴隶生活中找到乐趣，赞叹、抚摸、陶醉；其二，不仅被比自己强的人欺负，也会欺负比自己弱的人；第三，翻身之后，也希望做主子，有自己的奴才。想一想当下的社会环境，也是很有趣。
 
 未完，后面读到有意思的地方，会继续写一写。
 
