--- a/content/posts/2020-05-28-talk-32.md
+++ b/content/posts/2020-05-28-talk-32.md
@@ -34,6 +34,8 @@ tags: nonsense
 
 如果是一个做历史研究的人，恐怕就不适合这样的方法了。当然，也可以有一篇《如何快速阅读历史文献》的干货文章，或者一本《我是怎样读历史文献》的书。相比之下，我更愿意看看后者，了解其中门道。
 
+赤羽雄二说，在 30 岁之前要读 300 本书，我及格了。
+
 ### 03.
 
 疫情之后的世界，是我现在经常关注的话题。疫情短期不会结束，目前医学界也没有很好的办法，如果夏天的高温对其无用，再有些随机突变，可能「疫情之后」这个说法本身就变成了一个伪命题。
