--- a/content/posts/2020-09-22-nonsense-34.md
+++ b/content/posts/2020-09-22-nonsense-34.md
@@ -6,7 +6,7 @@ tags: nonsense
 
 ### 01.
 
-好久不见，好久不见。尝试回复周更。写作大概是唯一能让我静下心，体验到心流的事情了。
+好久不见，好久不见。尝试恢复周更。写作大概是唯一能让我静下心，体验到心流的事情了。
 ![](https://static.elizen.me/img/2020-09-22-064952.jpg)
 
 ### 02.
@@ -15,7 +15,7 @@ tags: nonsense
 
 - 刘子超. **失落的卫星**. 文汇出版社, 2020.
 
-这是本挺有趣的旅行游记，而且去的地方是罕有人深入的中亚，我们实实在在的邻居。书中最有趣的部分是作者时不时表达的苏联以及苏联解体对于这些国家的深渊影响，整个中亚遍布着俄罗斯人、各种斯坦国人以及朝鲜人、德国人、中国人。这样的政治产物，造就了很多扭曲的身份，国别与身份，也很有象征性。一个人，可以出生在俄罗斯，长在乌兹别克斯坦，说着塔吉克斯坦的语言，国家对于他们来说是一种畸形的存在。
+这是本挺有趣的旅行游记，而且去的地方是罕有人深入的中亚，我们实实在在的邻居。书中最有趣的部分是作者时不时表达的苏联以及苏联解体对于这些国家的深远影响，整个中亚遍布着俄罗斯人、各种斯坦国人以及朝鲜人、德国人、中国人。这样的政治产物，造就了很多扭曲的身份，国别与身份，也很有象征性。一个人，可以出生在俄罗斯，长在乌兹别克斯坦，说着塔吉克斯坦的语言，国家对于他们来说是一种畸形的存在。
 
 书中讲到一个故事，让我印象深刻，大概有 1/3 的吉尔吉斯男人去俄罗斯打工，妻子就留在国内。很多男人在那边认识别的女人，成家，之后就不再联系国内的妻子。妻子去俄罗斯找丈夫，发现丈夫早已不在原先的城市。对于他们来说，俄罗斯那么大，想在另外的地方重新开始生活，真的太容易了。
 
