--- a/content/posts/2020-09-22-nonsense-34.md
+++ b/content/posts/2020-09-22-nonsense-34.md
@@ -41,13 +41,13 @@ tags: nonsense
 
 书的核心可以概括为**如何理解乡绅思维**，**边缘与中心的关系**这两个比较大的主题。
 
-关于边缘，项飙说_“不要怕边缘，或者知识不够，把自己的不够、天真真实地表达出来，就会很可爱，不要装腔作势。”_而从现代性上来看，_“边缘”和“中心”变成一组对立关系，中国人又有那么强的中心情结，觉得边缘的生活不值得过，造成极大的焦虑。权力和资源过度集中。人们常说“红二代”一般不腐败，因为从小家庭条件比较好，钱无所谓，我想是有道理的，你看我们的日常生活或者新闻报道，不少巨贪都是从社会底层上来，包括在学术单位里，那些从底层上来的人往往更加容易变本加厉，就是因为他们对自己“边缘”的定位。他不认这个命。为了从边缘进入中心可以不择手段，进入中心之后觉得原来在边缘学到的那些做人原则也可以统统不要。_
+关于边缘，项飙说*“不要怕边缘，或者知识不够，把自己的不够、天真真实地表达出来，就会很可爱，不要装腔作势。”*而从现代性上来看，*“边缘”和“中心”变成一组对立关系，中国人又有那么强的中心情结，觉得边缘的生活不值得过，造成极大的焦虑。权力和资源过度集中。人们常说“红二代”一般不腐败，因为从小家庭条件比较好，钱无所谓，我想是有道理的，你看我们的日常生活或者新闻报道，不少巨贪都是从社会底层上来，包括在学术单位里，那些从底层上来的人往往更加容易变本加厉，就是因为他们对自己“边缘”的定位。他不认这个命。为了从边缘进入中心可以不择手段，进入中心之后觉得原来在边缘学到的那些做人原则也可以统统不要。*
 
-项飙提了很多问题，一些是他正在困惑的，一些是有他自己的答案的，对于边缘和中心的关系，他最后举了一个例子，_ “我突然想到日本的福冈，它做得比较好，它不用它和东京的关系来定位自己，它会通过它和韩国、中国，特别是山东青岛的关系来定位自己，认为自己是东亚的交汇点。我们广西也定位为东南亚的门户，日常中它跟东南亚的交往很多，这方面的文化意义也应该挖掘出来，让老百姓觉得他们每天干的事情其实很有意思，而不是老觉得自己的孩子不能再干这个，一定要到北京去。”_
+项飙提了很多问题，一些是他正在困惑的，一些是有他自己的答案的，对于边缘和中心的关系，他最后举了一个例子，*“我突然想到日本的福冈，它做得比较好，它不用它和东京的关系来定位自己，它会通过它和韩国、中国，特别是山东青岛的关系来定位自己，认为自己是东亚的交汇点。我们广西也定位为东南亚的门户，日常中它跟东南亚的交往很多，这方面的文化意义也应该挖掘出来，让老百姓觉得他们每天干的事情其实很有意思，而不是老觉得自己的孩子不能再干这个，一定要到北京去。”*
 
 在这种关系中，乡绅思维就变得很有趣，什么是乡绅思维呢，就是自己照顾好自己这一亩三分地，一个村子，一个小圈子，总有那么一个人，把身边人的情况摸得很透，又能在政策中寻找到平衡，_“他们的立足点是自己的小世界，但能够和大体制进行沟通和迂回，利用大体制，对大体制有解读，有自己的说法。如果从这样的意义上理解，乡绅在今天是完全可能的，要做好乡绅，就是要把自己的小世界弄清楚，对大的体制、权力也理解得很透。”“最重要的是他(乡绅)代表一批人，不断把他们的情况表达出来，乡绅就是一种代表，是分析性、理解性、代表性的，是话语的提炼者、发声者，当然也是原则、规则的制定者。”_
 
-找好自己的定位，经营好自己，_对自己生活的小世界发生兴趣，有意识地用自己的语言把自己的生活讲出来_，_平衡自己的历史来源和自己现在的行动，这是真正的英雄。真正的英雄不是改变世界，而是改变自己生活的每一天。_
+找好自己的定位，经营好自己，*对自己生活的小世界发生兴趣，有意识地用自己的语言把自己的生活讲出来*，*平衡自己的历史来源和自己现在的行动，这是真正的英雄。真正的英雄不是改变世界，而是改变自己生活的每一天。*
 
 这本书说的过多，但也只是这本书的一小部分。他还讲了很多我感兴趣的话题，比如**有机知识分子**，**机械与精确的区别**，**阅读的功力**等等。
 
@@ -63,13 +63,13 @@ tags: nonsense
 
 ### 04.
 
-黄章晋刚刚发了一篇文章，从他儿子不想让别人知道爸爸是骑电动车送他上学讲到了阶级，文章里他说_社会的残酷，孩子不是通过知识才知道的，而是自己感受到的，这个真实社会，可能孩子看到的远比成年人想象得更残酷。他们什么都懂。_
+黄章晋刚刚发了一篇文章，从他儿子不想让别人知道爸爸是骑电动车送他上学讲到了阶级，文章里他说*社会的残酷，孩子不是通过知识才知道的，而是自己感受到的，这个真实社会，可能孩子看到的远比成年人想象得更残酷。他们什么都懂。*
 
 前几天那个山村女校的校长，被人说是填鸭式教育，她承认，她就是填鸭式教育，对她们来说，考出去，是首要的，甚至是不择手段的考出去，只有出去了，才能彻底换个阶级，才有后面的机会。否则，怎么办？一辈一辈留在山里，一辈一辈种田种地？我挺理解，也很同意，对她们来说，高考是唯一的机会，她们同样可以选择最后回到大山去做接棒人，但那是她们走出去之后的选择，前提是，社会要先给她们一个选择的机会。
 
 这些问题是共性的，关联的，是短时间甚至一直都不会有答案的。我们能怎么办？或者再缩小一点，我能怎么办？我怎么和我的孩子讲阶级，讲教育，讲社会，讲社会制度？
 
-黄章晋在文章最后说，_只要孩子相信我，我就对他有信心。_
+黄章晋在文章最后说，*只要孩子相信我，我就对他有信心。*
 
 ### 05.
 
