--- a/content/posts/chat/2020-10-20.md
+++ b/content/posts/chat/2020-10-20.md
@@ -1,7 +1,7 @@
 ---
-title: '2011-10-16'
-date: 2011-10-16
-tags: [chat]
+title: 2020-10-20
+date: 2018-10-20
+tags: chat
 ---
 
-课堂中恍然，我怎会在此教授学生“这雪景……天上飘着……地上铺着……”，仿佛抽离身体，时间定格，另一个我不可思议地看着这幅聚焦于我的场景。
+测试一下木木哥的 Chat 页面。
