--- a/content/newsletter/2020-11-18-no-1.md
+++ b/content/newsletter/2020-11-18-no-1.md
@@ -60,10 +60,10 @@ sulg: newsletter-001
 
 顾衡在「得到好书榜」的栏目中介绍了格雷森·佩里的《[哗众取宠](https://book.douban.com/subject/30274796/)》一书，佩里对当代艺术的价值总结的特别好。
 
-- **首先，你要过得了同行评价这一关。**因为现代艺术，已经从技艺演变成了一项复杂而精巧的概念。它好还是不好，是不能由观众来评判的。就像音乐，《小苹果》最热，但就音乐品味而言，它是滥俗的，是没有长久价值的。而收藏家买艺术品，在意的并不是现在的价格，而是它100年后可能的价格。
-- **其次，是策展人。**策展人通过把一件作品在哪里展、和谁一起展，来标定这件作品的价值。就好比你做了个服装新品牌，你把专卖店开在GUCCI旁边还是优衣库旁边，那身价差别可就大了去了。
-- **第三，经纪人决定把你的作品卖给谁，这个也很重要。**福特基金会来买，5块钱；火车站倒卖火车票的王小二来买，多少钱也不卖。用这个办法，告诉收藏家，你100块买的话，以后会升值。
-- **最后，就是专业杂志了。**既然当代艺术已经成为一个关于概念的游戏，那就要建立起作品与作品之间的观念谱系。
+- **首先，你要过得了同行评价这一关**。因为现代艺术，已经从技艺演变成了一项复杂而精巧的概念。它好还是不好，是不能由观众来评判的。就像音乐，《小苹果》最热，但就音乐品味而言，它是滥俗的，是没有长久价值的。而收藏家买艺术品，在意的并不是现在的价格，而是它100年后可能的价格。
+- **其次，是策展人**。策展人通过把一件作品在哪里展、和谁一起展，来标定这件作品的价值。就好比你做了个服装新品牌，你把专卖店开在GUCCI旁边还是优衣库旁边，那身价差别可就大了去了。
+- **第三，经纪人决定把你的作品卖给谁，这个也很重要**。福特基金会来买，5块钱；火车站倒卖火车票的王小二来买，多少钱也不卖。用这个办法，告诉收藏家，你100块买的话，以后会升值。
+- **最后，就是专业杂志了**。既然当代艺术已经成为一个关于概念的游戏，那就要建立起作品与作品之间的观念谱系。
 
 这为判断当代艺术的价值提供了一些有用的角度。
 
