--- a/content/posts/2020-12-18-flomo.md
+++ b/content/posts/2020-12-18-flomo.md
@@ -30,13 +30,13 @@ slug: flomo-app
 
 关于此，我想再跑远点儿，多说几句。
 
-我在之前的《笔记应该记什么》中提过我的观点：**笔记首先要记一个好问题，一个钩子，而不是一个答案。**我们用印象笔记，收藏、收藏、收藏，却再也不看。用 Bear，用 Notion，用各种软件，写来写去，却发现需要一段材料的时候找到它很难。在信息时代，没有人可以靠熟读八股文走天下，就像麦克卢汉所说，我们创造了工具，而工具也在塑造我们。如今，更多时候是，我们看到了有用的信息，收藏起来，当需要使用它时，能够迅速找出来，引用。
+我在之前的[《笔记应该记什么》](https://elizen.me/post/2020/11/%E7%AC%94%E8%AE%B0%E7%A9%B6%E7%AB%9F%E8%A6%81%E8%AE%B0%E4%BB%80%E4%B9%88/)中提过我的观点：**笔记首先要记一个好问题，一个钩子，而不是一个答案**。我们用印象笔记，收藏、收藏、收藏，却再也不看。用 Bear，用 Notion，用各种软件，写来写去，却发现需要一段材料的时候找到它很难。在信息时代，没有人可以靠熟读八股文走天下，就像麦克卢汉所说，我们创造了工具，而工具也在塑造我们。如今，更多时候是，我们看到了有用的信息，收藏起来，当需要使用它时，能够迅速找出来，引用。
 
 大部分，或者说绝大部分人，关注的是收藏-需要-寻找这一路径，但忽略了最关键的一个问题：有用。我认为这是几乎所有不断尝试各种工具，不断思考如何记笔记，不断推倒重来的人，最大的结症：我们陷入了工具的漩涡，渴望被工具塑造，却忘记了我们使用一款工具的目的。这不限于效率工具，它可以放之四海而皆准，我们追求某种事物，到头来发现，我们只是被这种事物驱赶着前行。大到资本，小到基因。
 
 回归主题，我想聊的就是有用。我们现在知识焦虑、信息焦虑、教育焦虑，各种焦虑层出不穷，一部分原因，是我们已经习惯或者被迫习惯了被信息推着走。每天都有花式热点，反转再反转，各种信息杂耍一般蹦到我们面前，你躲也躲不掉，它们都是算法精心设计出来的，就像是量身定做的痒痒挠，特别知道我们哪里痒，哪里痒就挠哪里。长此以往，我们已经不知道我们真正需要的是什么，我们只关心今天怎么还不来挠我。
 
-我们已经忘记了最初打开一个搜索引擎，想要找什么？真正对我们「有用」的东西，完全被淹没。所以，我们收藏再收藏，整理再整理，到了想用的时候，却早已不记得自己曾经收藏过。因为绝大多数的收藏，其实都是「无用」的。**我们应该做的，是时刻关注我们真正关心的问题，给他们建立一个钩子。**
+我们已经忘记了最初打开一个搜索引擎，想要找什么？真正对我们「有用」的东西，完全被淹没。所以，我们收藏再收藏，整理再整理，到了想用的时候，却早已不记得自己曾经收藏过。因为绝大多数的收藏，其实都是「无用」的。**我们应该做的，是时刻关注我们真正关心的问题，给他们建立一个钩子**。
 
 认知科学里有个必要难度理论，大意就是，你输入信息时越困难，提取的时候越容易。回想一下，你认认真真坐下来读一本难啃的书，记下笔记，和你在网络上快速浏览某一篇文章，记下来的东西，哪一个在事后回想起来更清晰。答案无疑是前者。
 
