--- a/content/posts/2020-12-31-2020-end.md
+++ b/content/posts/2020-12-31-2020-end.md
@@ -6,7 +6,7 @@ tags: life
 slug: 2020-end
 ---
 
-# 144 2020 年概览
+# 2020 年概览
 
 > 愿我有普通的美好生活，也有不普通的美好生活，像以往一样，可以为之付出很多，也无妨为之舍弃很多。我要提醒自己不要为了成年的欢乐而忽略内心中的孩子，为了追寻成功而花费的日夜终有尽头，而无论命运带来什么，都只不过是人间再平常不过的事而已，没有什么会特别针对我，也没有什么会特别施惠于我。
 > ——《佛祖在一号线》，李海鹏
@@ -17,13 +17,13 @@ slug: 2020-end
 
 ---- 
 
-### 一
+## 一
 
 ![](https://static.elizen.me/img/2020-12-30-081711.jpg)
 
 老规矩，每年三个愿望。这是今年的，算是完成了三个小目标。希望在帮助别人的方面做更多事情。其实嘴上说帮助别人，更多的是反思自己。新年的愿望，有些想法，还不完善，和去年一样，尽量小，尽量明确，尽量增加幸福感。
 
-### 二
+## 二
 
 ![](https://static.elizen.me/img/2020-12-30-082723.jpg)
 
@@ -33,7 +33,7 @@ slug: 2020-end
 
 即便是嘟嘟，我也希望他能体味到真正的竞技体育精神，在场上，什么都是背景，只有一种声音，要赢。而对此最好的诠释者，我所见者，唯有科比。
 
-### 三
+## 三
 
 ![](https://static.elizen.me/img/2020-12-30-085031.jpg)
 
@@ -41,7 +41,7 @@ slug: 2020-end
 
 我没有经历过亲手拿起摄影机满街拍的时代，但是手机如此便利，我还是坚定视频有它自我的力量，它的视听语言信息量可以做到很大，这样勾起的回忆，明显强于文字表达。所以，Vlog 还是要拍。
 
-### 四
+## 四
 
 ![](https://static.elizen.me/img/2020-12-30-101348.jpg)
 
@@ -53,13 +53,13 @@ slug: 2020-end
 
 明年还准备打卡颐和园、双秀公园、温榆河公园、电影博物馆、天文博物馆、国家博物馆。以及，不知道能不能去的环球影城。
 
-### 五
+## 五
 
 ![](https://static.elizen.me/img/2020-12-30-100942.jpg)
 
 吃吃喝喝。疫情初见平稳之后，朋友们都憋的不行，在朝阳公园野餐了一次，去第五季烧烤了一次，在慕田峪长城脚下大吃大喝了一次。吃吃喝喝中，也走过了我自己[火花四溅的三十岁](https://mp.weixin.qq.com/s?__biz=MzAwNDAyMDk5Mw==&mid=2650792587&idx=1&sn=cc01bd70d003ac6bc86064829c52957c&chksm=83390ce5b44e85f3c84b02d26721fc29ae41b529a5cb2ee15251b9380b295995c129238379ad&token=476121607&lang=zh_CN#rd)。
 
-### 六
+## 六
 
 ![](https://static.elizen.me/img/2020-12-30-102133.jpg)
 
@@ -83,7 +83,7 @@ slug: 2020-end
 
 音乐呢，十分意外，今年我喜欢的歌手分分发力，可能是疫情对做音乐的影响很小。左小祖咒的子母专辑《台湾》和《我爱台湾》，这已经不是音乐了，是艺术品。而谭维维的《3811》也是属于作家的作品。
 
-### 七和八
+## 七和八
 
 ![](70FEE925-A316-45AA-B41D-A5AA33802625_1_102_o.jpeg)
 
@@ -97,7 +97,7 @@ slug: 2020-end
 
 另外一些杂七杂八的东西，都是新填的[小物件](https://mp.weixin.qq.com/s?__biz=MzAwNDAyMDk5Mw==&mid=2650792653&idx=1&sn=29b52619185d1b72598f6f5c3ad0322a&chksm=83390ca3b44e85b5641ac24ca88239c748888ecaaa054b421756d35daf8a3da62fbcd23e1958&token=476121607&lang=zh_CN#rd)，电动车、iPad、Switch、咖啡壶。每一样，都让生活有趣一些。
 
-### 九
+## 九
 
 ![](https://static.elizen.me/img/2020-12-30-103941.jpg)
 
@@ -107,7 +107,7 @@ slug: 2020-end
 
 > 「要知道我是风的儿子，死于高贵的忧郁」。
 
-### 十
+## 十
 
 走。到生活里去。这是生命唯一的意义。
 
