--- a/content/posts/chaos/2021-04-22-qian-ti.md
+++ b/content/posts/chaos/2021-04-22-qian-ti.md
@@ -1,10 +1,12 @@
 ---
 title: 前提
+author: Elizen
 date: 2021-04-22
 tags: chaos
+slug: chaos-1
 ---
 
-给大家提供一个直观的判断标准：我想写 100 个字，针对这 100 个字阅读量应该有 10000 字，吸收、处理、输出，一整套流程在经过训练之后，速度可以很快，甚至感觉像是直觉、不经意或者潜意识里完成了这份工作。
+提供一个直观的判断标准：我想写 100 个字，针对这 100 个字阅读量应该有 10000 字，吸收、处理、输出，一整套流程在经过训练之后，速度可以很快，甚至感觉像是直觉、不经意或者潜意识里完成了这份工作。
 
 重点是，这 10000 字的阅读，是少不了的。很多时候我们阅读一段文本信息时，经常忽略了「前提」这个重要部分。一段话被随意摘录出来，可以供给给正反两方来用，大家都能找到支持自己观点的角度，问题就在这里，他们会刻意制造某种「前提」，让你从他们规划好的路径出发去思考。
 
