--- a/content/posts/2021-04-27-de-dao.md
+++ b/content/posts/2021-04-27-de-dao.md
@@ -5,6 +5,9 @@ date: 2021-04-27
 tags: tools
 slug: de-dao
 ---
+开箱即用，只对自己负责的测评。
+
+### 上午开箱
 
 新到的得到阅读器 Pro（不是发布会上的 Max，那个太大了，而且我发现那个是 200 多 PPI，就放弃了），开箱使用半小时，低于预期了。
 
@@ -18,10 +21,14 @@ slug: de-dao
 
 但是有一个优点要夸一下，如果你愿意，可以在阅读器里使用其他阅读软件，得到做的很开放。
 
-### 更新
+### 下午更新
 
 用了一天，在实际阅读中另一个我很看重的地方是划线，目前体验也是没有 Kindle 好，不过习惯了一会儿，那种卡顿感也还能接受，不知道后续笔到了，会不会好一些。
 
 还有一个非常值得吐槽的细节，是我觉得阅读设计的逻辑问题，在阅读过程中，我可能会翻看之前的划线笔记，但是点过去之后，就找不到回到刚才阅读位置的地方了。点击返回，是回到书架位置，这个很不方便，不知道是我还没找到操作方法，还是设计上出现了问题。在纸质书阅读中，在一本书里翻来翻去是常有现象，回到当前阅读位置应该是一个标配才对。
 
 这一点，Mac 自带的 Books 是目前我用过的最好的，Kindle 也还可以。
+
+最后，带上壳，有些重了，保护壳的质感也不好。
+
+​未完待续。
