--- a/content/chaos/2021-04-22-qian-ti.md
+++ b/content/chaos/2021-04-22-qian-ti.md
@@ -3,7 +3,7 @@ title: 前提
 author: Elizen
 date: 2021-04-22
 tags: chaos
-slug: chaos-1
+slug: qian-ti
 ---
 
 提供一个直观的判断标准：我想写 100 个字，针对这 100 个字阅读量应该有 10000 字，吸收、处理、输出，一整套流程在经过训练之后，速度可以很快，甚至感觉像是直觉、不经意或者潜意识里完成了这份工作。
