--- a/content/posts/2021-04-27-de-dao.md
+++ b/content/posts/2021-04-27-de-dao.md
@@ -1,13 +1,13 @@
 --- 
 title: 得到电子书试用体验（5月8日更新）
 author: Elizen
-date: 2021-04-27
+date: 2021-05-08
 tags: tools
 slug: de-dao
 ---
 开箱即用，只对自己负责的测评。
 
-### 上午开箱
+### 上午开箱 (4 月 27 日)
 
 新到的得到阅读器 Pro（不是发布会上的 Max，那个太大了，而且我发现那个是 200 多 PPI，就放弃了），开箱使用半小时，低于预期了。
 
