--- a/content/newsletter/2021-06-09-no-1.md
+++ b/content/newsletter/2021-06-09-no-1.md
@@ -20,7 +20,7 @@ slug: newsletter-002
 
 文章里唐诺认为羽生善治这种犹如神迹之人，是天赐的，极其罕见的。我们每周准时坐在电视前，仔细观看和分析羽生善治的每一手棋，「绝不会使你变成羽生善治如棋盘中“飞”化为“龙”，怎么会不知道呢？」*（P226）*。可能博尔赫斯晚年的一句话能解释一部分，「我觉得我读过的东西远比我写出来的东西要来得重要多了。我们都只阅读我们喜欢的读物一一不过写出来的东西就不一定是我们想要写的，而是写得出来的东西。说得对，是为了看懂，多看懂一些，而不是成为。如果万事万物都要“你成为”才算数的话，那我们眼前的世界图像也未免太荒凉了，所以波赫士[^3]补了这句重话：“我认为当代文学的罪过就是自我意识太重了。」*（P226）*
 
-说了一圈，总算说回到我最初的表达：我要记录什么。下面这段是我和 @DemoChen 聊天时我说道的：
+说了一圈，总算说回到我最初的表达：我要记录什么。下面这段是和 @DemoChen 聊天时说道的：
 
 > 我倒是有一个自己的关键词，就是「人是社会关系的总和」（此处的人也可以替换成某件事，某个现象）。看一个人，判断一个人，要个体化一点，他在某些场景会表达出某些观点，但在另外的地方又可能完全相反，一个人是要和周边的环境放在一起看的。我想要做的东西，就是去挖掘有没有人影响了环境，或者反过来被环境影响了（科技现在可能就是很大的一个会影响人的外部环境）。
 
