--- a/content/posts/2020-04-16-bb.md
+++ b/content/posts/2020-04-16-bb.md
@@ -8,6 +8,6 @@ tags: blog
 
 所以干脆弄点儿好玩的，在本地开了一个《21世纪鲁迅日记见习指南》。正巧，[B言B语](https://bb.daibor.cn/)的作者写了个教程，特别简单。我就跟着搭建了一个，配合 iOS 的快捷指令，一键 Push 到网站。爽到飞起。
 
-欢迎访问我的「[狂人日记](https://bb.elizen.me)」。
+欢迎访问「[狂人日记](https://bb.elizen.me)」。
 
 ![狂人日记](https://static.elizen.me/img/2020-04-16-1461587022124_.pic_hd.jpg)
