--- a/content/newsletter/2021-08-25-no-8.md
+++ b/content/newsletter/2021-08-25-no-8.md
@@ -7,7 +7,7 @@ slug: newsletter-008
 
 ---
 
-这是「叁拾一周」第七期，感谢这周新增的邮件订阅读者，目前订阅人数达到了 56 位。我的下一个目标是 60。
+这是「叁拾一周」第八期，感谢这周新增的邮件订阅读者，目前订阅人数达到了 56 位。我的下一个目标是 60。
 
 五条人发了两张新专辑[《一半真情流露，一半靠表演》](https://music.douban.com/subject/35567593/)和[《活鱼逆流而上，死鱼随波逐流》](https://music.douban.com/subject/35567473/)，从销量上看并不符合他们出圈之后的流量，看来小众音乐，还是小众。五条人在我看来已经不是简单的音乐人了，仁科身上有很强的哲学气质，我很喜欢，阿茂是一个柔和版的左小祖咒，他们这个组合的灵气与魅力，缺一不可。他们是如何把自己融合为一个整体，确实很奇妙。
 
