--- a/content/newsletter/2021-08-11-no-6.md
+++ b/content/newsletter/2021-08-11-no-6.md
@@ -52,8 +52,10 @@ slug: newsletter-006
 
 ---- 
 
-有任何问题欢迎发邮件给我。
+有任何问题欢迎发邮件给我，也欢迎转发给你们的朋友。
 
-邮箱地址：elizen.me@gmail.com
+订阅地址：[叁拾一周](https://elizen.zhubai.love/)
 
-下下周三见 👋
+邮箱地址：[elizen.me@gmail.com](mailto:elizen.me@gmail.com)
+
+下周三见 👋
