--- a/content/newsletter/2021-07-13-no-3.md
+++ b/content/newsletter/2021-07-13-no-3.md
@@ -41,9 +41,11 @@ slug: newsletter-003
 
 ---- 
 
-有任何问题欢迎发邮件给我。
+有任何问题欢迎发邮件给我，也欢迎转发给你们的朋友。
 
-邮箱地址：elizen.me@gmail.com
+订阅地址：[叁拾一周](https://elizen.zhubai.love/)
+
+邮箱地址：[elizen.me@gmail.com](mailto:elizen.me@gmail.com)
 
 下周三见 👋
 
