--- a/content/newsletter/2021-07-21-no-4.md
+++ b/content/newsletter/2021-07-21-no-4.md
@@ -63,10 +63,10 @@ slug: newsletter-004
 
 ---- 
 
-有任何问题欢迎发邮件给我。
+有任何问题欢迎发邮件给我，也欢迎转发给你们的朋友。
 
-订阅地址：[叁拾一周](https://www.getrevue.co/profile/Elizen)
+订阅地址：[叁拾一周](https://elizen.zhubai.love/)
 
-邮箱地址：elizen.me@gmail.com
+邮箱地址：[elizen.me@gmail.com](mailto:elizen.me@gmail.com)
 
 下周三见 👋
