--- a/content/newsletter/2021-07-27-no-5.md
+++ b/content/newsletter/2021-07-27-no-5.md
@@ -55,10 +55,10 @@ slug: newsletter-005
 
 ---- 
 
-有任何问题欢迎发邮件给我。
+有任何问题欢迎发邮件给我，也欢迎转发给你们的朋友。
 
-邮箱地址：elizen.me@gmail.com
+订阅地址：[叁拾一周](https://elizen.zhubai.love/)
 
-下周家庭旅行，去福建平潭，可能要断更一期。
+邮箱地址：[elizen.me@gmail.com](mailto:elizen.me@gmail.com)
 
-下下周三见 👋
+下周三见 👋
