--- a/content/newsletter/2021-09-22-no-12.md
+++ b/content/newsletter/2021-09-22-no-12.md
@@ -44,7 +44,7 @@ slug: newsletter-012
 
 有任何问题欢迎发邮件给我，也欢迎转发给你们的朋友。
 
-订阅地址：[叁拾一周](https://www.getrevue.co/profile/Elizen)
+订阅地址：[叁拾一周](https://elizen.zhubai.love/)
 
 邮箱地址：[elizen.me@gmail.com](mailto:elizen.me@gmail.com)
 
