--- a/content/posts/2021-11-18-links.md
+++ b/content/posts/2021-11-18-links.md
@@ -1,7 +1,7 @@
 ---
 title: Hugo 页面跳转
 author: Elizen
-date: 2021-11-19
+date: 2021-11-18
 tags: ["blog"]
 slug: links-to-page
 
@@ -18,6 +18,6 @@ slug: links-to-page
 
 其中`ref`是绝对链接，`relref`是相对链接。
 
-比如，点击[读书要放轻松]({{ relref "posts/2021-11-18-links.md#放轻松去阅读}})就可以实现跳转。
+比如，点击[读书要放轻松]({{< relref "newsletter/2021-11-17-no-20.md#放轻松去阅读 >}})就可以实现跳转。
 
 这个功能在写一些长文的时候，感觉用得上。不过我似乎有越写越短的趋势了啊。
