--- a/content/posts/2021-11-18-links.md
+++ b/content/posts/2021-11-18-links.md
@@ -9,14 +9,7 @@ slug: links-to-page
 
 之前关注的博客都可以看到一些页面内或者页面间的标题级别跳转，很喜欢，后来用 Roam 每一个块都有唯一值，也觉得太好用了，就研究了一下，原来 Hogo 自带页面跳转和锚点链接的功能。
 
-主要用一下两个代码：
-
-``` python
-{{< ref "document#anchor" >}}
-{{< relref "document.md" >}}
-```
-
-其中`ref`是绝对链接，`relref`是相对链接。
+主要用一下 ref 和 relref 两个指令，其中`ref`是绝对链接，`relref`是相对链接。
 
 比如，点击[读书要放轻松]({{< relref "newsletter/2021-11-17-no-20.md#放轻松去阅读" >}})就可以实现跳转。
 
