--- a/content/posts/2021-11-18-links.md
+++ b/content/posts/2021-11-18-links.md
@@ -13,8 +13,14 @@ slug: links-to-page
 
 ![](https://tva1.sinaimg.cn/large/008i3skNly1gwjrf56izzj30j80cgglz.jpg)
 
-其中`ref`是绝对链接，`relref`是相对链接。
+其中`ref`是绝对链接，`relref`是相对链接，绝对链接需要写全域名地址和文件的存放路径，相对链接就简单很多，都是针对 content 目录下的内容。
 
-比如，点击[读书要放轻松]({{< relref "newsletter/2021-11-17-no-20.md#放轻松去阅读" >}})就可以实现跳转。
+比如，点击[读书要放轻松]({{< ref "/newsletter/2021-11-17-no-20.md#放轻松去阅读" >}})就可以实现页面间的跳转。
 
 这个功能在写一些长文的时候，感觉用得上。不过我似乎有越写越短的趋势了啊。
+
+参考资料：
+
+*[Hugo页面跳转和锚点链接设置](https://455545.xyz/post/2020-5-17-Hugo页面跳转和锚点链接设置/)*
+
+*[Hugo 中的 ref 和 relref](https://www.thisfaner.com/p/ref-relref-in-hugo/)*
