--- a/content/posts/2021-11-18-links.md
+++ b/content/posts/2021-11-18-links.md
@@ -19,8 +19,10 @@ slug: links-to-page
 
 这个功能在写一些长文的时候，感觉用得上。不过我似乎有越写越短的趋势了啊。
 
+---
+
 参考资料：
 
-*[Hugo页面跳转和锚点链接设置](https://455545.xyz/post/2020-5-17-Hugo页面跳转和锚点链接设置/)*
+[Hugo页面跳转和锚点链接设置](https://455545.xyz/post/2020-5-17-Hugo页面跳转和锚点链接设置/)
 
-*[Hugo 中的 ref 和 relref](https://www.thisfaner.com/p/ref-relref-in-hugo/)*
+[Hugo 中的 ref 和 relref](https://www.thisfaner.com/p/ref-relref-in-hugo/)
