--- a/content/newsletter/2022-02-08-no-29.md
+++ b/content/newsletter/2022-02-08-no-29.md
@@ -6,9 +6,9 @@ tags: newsletter
 slug: newsletter-029
 
 ---
-这是「叁拾一周」第 29 期，感谢这周新增的邮件订阅读者，目前订阅人数达到了 348 位。我的下一个目标是 399。
+这是「叁拾一周」第二十九期，感谢这周新增的邮件订阅读者，目前订阅人数达到了 348 位。我的下一个目标是 399。
 
-昨天休假，没有上班，一方面是春节期间日程安排地满满当当，想给自己一个缓冲；另一方面是家里的人类幼崽，麻酱爱好者，过三岁生日，他玩了一天。长假很容易改变一个人的精神状态，准备假期以及假期之后的后遗症，尤其像新年这种，又是长假，又是传统节日，还是立 Flag 的好时期，更容易让人的精神陷入某种极端。适当的缓冲，不失为一个好方法。
+昨天休假，没有上班，一方面是春节期间日程安排地满满当当，想给自己一个缓冲；另一方面是家里的人类幼崽，麻酱爱好者，过三岁生日，陪他玩了一天。长假很容易改变一个人的精神状态，准备假期以及假期之后的后遗症，尤其像新年这种，又是长假，又是传统节日，还是立 Flag 的好时期，更容易让人的精神陷入某种极端。适当的缓冲，不失为一个好方法。
 
 今天的主题，就想聊一聊缓冲。
 
