--- a/content/posts/2021-11-22-dudu.md
+++ b/content/posts/2021-11-22-dudu.md
@@ -1,7 +1,7 @@
 ---
-title: 嘟嘟小记
+title: 未命名
 author: Elizen
-date: 2021-11-18
+date: 2022-04-24
 tags: ["child"]
 slug: du-du
 toc: true
@@ -14,8 +14,14 @@ toc: true
 
 # 两岁三岁记
 
+## 十一感冒（2022.04）
+
+最近十一感冒，反反复复十分难受。晚上，嘟嘟和十一在阳光房玩了一会儿，听见妈妈咳嗽，看着我说：
+
+> 唉，你这个可怜的老婆啊！
+
 ## 北京海洋馆
 
-打卡北京海洋馆，基本上一路都是这是什么，这是什么，这是什么...然后从头走到尾，啊，我找到我小丑鱼了，你找到你要找的大海龟了。
+打卡北京海洋馆，基本上一路都是这是什么，这是什么，这是什么…然后从头走到尾，啊，我找到我小丑鱼了，你找到你要找的大海龟了。
 
 在海洋剧场表演的时候，海豹都快表演完了，嘟嘟还在问我，它什么时候下水啊？它怎么还不下水？
