--- a/content/posts/2022-06-15-see-a-play.md
+++ b/content/posts/2022-06-15-see-a-play.md
@@ -12,6 +12,6 @@ slug: go-to-rome-to-see-a-play
 
 品牌多了路好走，照着热门的来一套。千篇一律的东西，很可能出自一个工厂，打谁的标签都可以，买的全是咱家的货，这就叫数字化转型，个性化服务。连明星爆料都得叠楼，没有 1、2、3个反转，营销也不叫成功。但问题来了，这么多戏楼子，哪来看戏的人呢？
 
-前几天，微信公众号发来几个通知，很多年前写的几篇关于[[李志]]的文章都被删除了，让我想到一句话，Web3 的真正价值是什么，是把全世界变成了一个巨大无比又不可以随便删改的数据库。这是理想主义者看到的它的美好。公众号也有数据库，但可以随便删改，不光是我可以，公众号的工作人员也可以，甚至，他们的权限高于作者。所以，不排除哪天风向一变，船就再也靠不了岸，仔细看看，已经变了不是。对我这种性格稍稍内向的人，看到此情此景，只能撒腿就跑。少听，少看，少聊。
+前几天，微信公众号发来几个通知，很多年前写的几篇关于李志的文章都被删除了，让我想到一句话，Web3 的真正价值是什么，是把全世界变成了一个巨大无比又不可以随便删改的数据库。这是理想主义者看到的它的美好。公众号也有数据库，但可以随便删改，不光是我可以，公众号的工作人员也可以，甚至，他们的权限高于作者。所以，不排除哪天风向一变，船就再也靠不了岸，仔细看看，已经变了不是。对我这种性格稍稍内向的人，看到此情此景，只能撒腿就跑。少听，少看，少聊。
 
 好在，张小龙的微信还讲良心，菜撤了，后厨还在，最近准备整理整理被删的文章，转移阵地，放到博客上来，总归是自己颠勺，味道不变，好饭也不怕晚。世界太热闹了，就别去罗马看戏了，人多，危险。
