--- a/content/posts/2022-12-24-2022-end.md
+++ b/content/posts/2022-12-24-2022-end.md
@@ -84,7 +84,7 @@ slug: 2022-end
 
 ![DSCF5587](https://static.elizen.me/img/202212241637652.jpg)
 
-今年又把老旧的相机捧了起来，不论是在家，还是外出，走到哪儿，尽量背着它，除了拍娃，也拍拍花花草草。我特别喜欢相机的取景框，它就像一个围栏，强制地限制住你的眼镜，不同的焦段，可以带来不同的世界。但我只有 35mm 的定焦镜头，它就这样强迫你去习惯这双眼镜，毫无道理。当你想框进来一些什么东西，就意味着你要放弃更多的东西。
+今年又把老旧的相机捧了起来，不论是在家，还是外出，走到哪儿，尽量背着它，除了拍娃，也拍拍花花草草。我特别喜欢相机的取景框，它就像一个围栏，强制地限制住你的眼睛，不同的焦段，可以带来不同的世界。但我只有 35mm 的定焦镜头，它就这样强迫你去习惯这双眼睛，毫无道理。当你想框进来一些什么东西，就意味着你要放弃更多的东西。
 
 其实，这不就是人生么。
 
@@ -96,7 +96,7 @@ slug: 2022-end
 
 不过断断续续写了 41 期[通讯](https://elizen.me/newsletter/)，每周一篇，从 2021 年中写到 2022 年 8 月底。百分制，给自己打了 55 分，还不算及格。这 41 篇里，满意的挑不出十篇。一方面，是写多了，在没得写的时候还坚持写，就只能是凑数；另一方面，写成了四不像，没有清晰的结构，汤汤水水在聊一些关于「选择」，关于「幸福」的话题，但沉淀得不够，话说得太满，读起来就像看一头截肢的大象。
 
-加上我停了通讯写作之后，好朋友开始记周记，一直记录到她和老公回美国，给我的触动特别多，她写回了原来博客的样子，感受自己的感受，再把这些感受如实写下来。每次看完都弄得我心里痒痒，狠她为什么名字都要叫杨洋。哪天认不住了，没准儿我也开始动笔，周记起来。先不挖坑，也没什么期待。
+加上我停了通讯写作之后，好朋友开始记周记，一直记录到她和老公回美国，给我的触动特别多，她写回了原来博客的样子，感受自己的感受，再把这些感受如实写下来。每次看完都弄得我心里痒痒，狠她为什么名字都要叫杨洋。哪天忍不住了，没准儿我也开始动笔，周记起来。先不挖坑，也没什么期待。
 
 ## 八
 
