--- a/content/posts/2023-02-02-recently.md
+++ b/content/posts/2023-02-02-recently.md
@@ -7,7 +7,9 @@ slug: recently
 
 ---
 
-木木哥做出了那种「大众根本不知道自己要什么，知道你把东西放在他们面前」的新功能。太适合展示我的近期动态了，在考虑这个页面也不要单独创建一个链接。
+木木哥做出了那种「大众根本不知道自己要什么，直到你把东西放在他们面前」的新功能。太适合展示我的近期动态了，~~考虑这个页面要不要单独创建一个链接~~。
+
+已经添加到首页了，给我的首页实现了大换血。
 
 ## 近期观影
 
