--- a/content/posts/2023-04-06-charm.md
+++ b/content/posts/2023-04-06-charm.md
@@ -7,7 +7,7 @@ slug: charm
 
 ---
 
-Bear Liu 的[推文](https://twitter.com/bearbig/status/1643851384129986560?s=20) 下面有这样一条评论：
+Bear Liu 的[推文](https://twitter.com/bearbig/status/1643851384129986560?s=20) 下面有一条评论：
 
 > 那一年王小波插队，被称做王二，年轻的他裸身爬上村口的大树，鸡吧倒挂下来。
 
