--- a/content/posts/2023-04-06-charm.md
+++ b/content/posts/2023-04-06-charm.md
@@ -12,3 +12,5 @@ Bear Liu 的[推文](https://twitter.com/bearbig/status/1643851384129986560?s=20
 > 那一年王小波插队，被称做王二，年轻的他裸身爬上村口的大树，鸡吧倒挂下来。
 
 我不知道这是思想的魅力，还是语言的魅力，但是我知道，人工智能还没有这个魅力，我也不相信未来的某一天它能拥有这样的魅力。
+
+二〇二三年四月六日记。
