--- a/content/posts/2025-01-13-2025-week1-and-week2.zh.md
+++ b/content/posts/2025-01-13-2025-week1-and-week2.zh.md
@@ -4,7 +4,7 @@ author: Elizen
 date: 2025-01-13
 tags:
   - 双周记
-slug: 2025-week1-and-week2
+slug: 2025-week1-and-week2.zh.md
 ---
 
 新年读了一本关于效率的书。已经对这类书脱敏很久了，但就像当年老罗说得一样，鸡汤这种东西，只要不重样，每隔一段时间来上一碗，还是有帮助的。而且面对一本书，我们应该是什么样的态度，其实也随着时光隐隐然有些变化。
