--- a/content/posts/2025-02-22-2025-week7-and-week8.md
+++ b/content/posts/2025-02-22-2025-week7-and-week8.md
@@ -55,7 +55,9 @@ slug: 2025-week7-and-week8
 
 除此之外，这两周里听说了一个美丽的故事：
 
-> 张曼玉在「花样年华」的一次访谈中回答记者提问，记者说导演在影片最后增加了与影片无关的戴高乐访问柬埔寨，是想表达自己的政治立场么？张曼玉答到，电影就像是显微镜，它过度聚焦于两个人之间的故事，但人在世界上是无比的渺小，结尾导演只是把镜头拉远，让大家知道，世界上还有很多很大的事情；袁长庚在知行小酒馆里也说到，小津安二郎在日本战后的电影中有很大的能量，恰恰是因为在日本整个思想陷入绝望之后，他告诉人们，我们还是要这样生活，要吃米饭，要吃秋刀鱼，这一切都没有变化，要在生活的细节里继续。 
+> 张曼玉在「花样年华」的一次访谈中回答记者提问，记者说导演在影片最后增加了与影片无关的戴高乐访问柬埔寨，是想表达自己的政治立场么？张曼玉答到，电影就像是显微镜，它过度聚焦于两个人之间的故事，但人在世界上是无比的渺小，结尾导演只是把镜头拉远，让大家知道，世界上还有很多很大的事情。
+
+袁长庚在知行小酒馆里也说到，小津安二郎在日本战后的电影中有很大的能量，恰恰是因为在日本整个思想陷入绝望之后，他告诉人们，我们还是要这样生活，要吃米饭，要吃秋刀鱼，这一切都没有变化，要在生活的细节里继续。 
 
 至于这两周其他零零碎碎的事情，大概如下：
 
